Updates rover. Fixes some alignment problems, adds request for given rover.

--- a/rover.css
+++ b/rover.css
@@ -29,37 +29,28 @@ body {
 .face {
     backface-visibility: hidden;
     position: absolute;
+    display: flex;
+    align-items: center;
 }
 
 .face.back {
-
     transform: rotateY(180deg);
 }
 
-/*
-#card {
-    
-    transition: transform 1s;
-    transform-style: preserve-3d;
-}
 
-.front {
-    position: absolute;
-    backface-visibility: hidden;
-    height: 500px;
-}
-
-.back {
-    position: absolute;
-    transform: rotateY( 180deg );
-    height: 500px;
-}
-*/
-/* #rovers {
+#rover_details {
     display: flex;
-    justify-content: center;   
+    align-items: center;  
+    width: 
 }
-*/
+
+#rovers {
+    display: flex;
+    align-items: center;
+    margin-top: 8px;
+    margin-left: 6px;
+}
+
 .rover {
     border: 1px solid black;
     width: 200px;
@@ -67,21 +58,29 @@ body {
     margin-left: 3px;
     margin-right: 3px;
     box-sizing: border-box;
-    /* padding: 10px; 
+    padding: 10px; 
     display: flex;
     align-items: flex-end;
     background-size: cover;
 } 
 
+@media only screen and (max-width: 600px) {
+    #container {
+        width: 90%;
+    }
+  }
+
+
+
 .rover#spirit { background-image: url("rover/spirit.jpg");}
 .rover#opportunity {background-image: url("rover/opportunity.jpg")}
 .rover#curiosity {background-image: url("rover/curiosity.jpg")}
 
-.rover div.title {
+div.title {
     display: flex;
     flex-grow: 1;
     background-color: rgba(53,53,53,0.7);
     color: white;
     justify-content: center;
     font-size: 20pt;
-} */
+}
